<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.sakaiproject</groupId>
  <artifactId>sdata</artifactId>
  <packaging>pom</packaging>
  <name>Sakai SData Project</name>
  <version>2.6.0RC1-SNAPSHOT</version>
  <organization>
    <name>Timefields Ltd</name>
    <url>http://www.tfd.co.uk/</url>
  </organization>
  <issueManagement>
    <system>jira</system>
    <url>http://bugs.sakaiproject.org/jira/browse/SAK</url>
  </issueManagement>
  <ciManagement>
    <system>continuum</system>
    <notifiers>
      <notifier>
        <type>mail</type>
        <address>builds@collab.sakaiproject.org</address>
      </notifier>
    </notifiers>
  </ciManagement>
  <inceptionYear>2003</inceptionYear>
  <prerequisites>
    <maven>2.0.6</maven>
  </prerequisites>
<!-- Mailing Lists ======================================================= -->
  <mailingLists>
    <mailingList>
      <name>Sakai User List</name>
      <subscribe>https://collab.sakaiproject.org</subscribe>
      <unsubscribe>https://collab.sakaiproject.org</unsubscribe>
      <post>sakai-user@collab.sakaiproject.org</post>
      <archive>http://news.gmane.org/group/gmane.comp.cms.sakai.user/last=/force_load=t</archive>
    </mailingList>
    <mailingList>
      <name>Sakai Developer List</name>
      <subscribe>https://collab.sakaiproject.org</subscribe>
      <unsubscribe>https://collab.sakaiproject.org</unsubscribe>
      <post>sakai-dev@collab.sakaiproject.org</post>
      <archive>http://news.gmane.org/group/gmane.comp.cms.sakai.dev/last=/force_load=t</archive>
    </mailingList>
    <mailingList>
      <name>Sakai SCM List</name>
      <subscribe>https://collab.sakaiproject.org</subscribe>
      <unsubscribe>https://collab.sakaiproject.org</unsubscribe>
      <post>source@collab.sakaiproject.org</post>
    </mailingList>
  </mailingLists>
  <licenses>
    <license>
      <name>Educational Community License, Version 1.0</name>
      <url>http://www.opensource.org/licenses/ecl1.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <connection>scm:svn:https://source.sakaiproject.org/contrib/tfd/trunk/sdata</connection>
    <developerConnection>scm:svn:https://source.sakaiproject.org/contrib/tfd/trunk/sdata</developerConnection>
    <url>https://source.sakaiproject.org/contrib/tfd/trunk/sdata</url>
  </scm>
  <properties>
    <sakai.version>2.6.0RC1-SNAPSHOT</sakai.version>
    <sakai.servletapi.version>2.4</sakai.servletapi.version>
  </properties>
  <distributionManagement>
    <repository>
      <uniqueVersion>false</uniqueVersion>
      <id>local</id>
      <name>Local Test</name>
      <url>file:///tmp/maven2</url>
      <layout>default</layout>
    </repository>
    <site>
      <id>local</id>
      <name>Local Test</name>
      <url>file:///tmp/site</url>
    </site>
  </distributionManagement>
  <pluginRepositories>
    <pluginRepository>
      <id>codehaus snapshot repository</id>
      <url>http://snapshots.repository.codehaus.org/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
    <pluginRepository>
      <id>Sakai Plugin Repo</id>
      <url>http://source.sakaiproject.org/maven2</url>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
  </pluginRepositories>
  <repositories>
    <repository>
      <id>sakai-maven</id>
      <name>Sakai Maven Repo</name>
      <layout>default</layout>
      <url>http://source.sakaiproject.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>sakai-ibiblio-mirror</id>
      <name>Sakai Ibiblio Mirror Repo</name>
      <layout>default</layout>
      <url>http://source.sakaiproject.org/maven2-ibiblio</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>default</id>
      <name>Maven Repository Switchboard</name>
      <layout>default</layout>
      <url>http://repo1.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>apache-repo</id>
      <name>apache-repo</name>
      <layout>default</layout>
      <url>http://myfaces.zones.apache.org/dist/maven-repository</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.sakaiproject.kernel</groupId>
        <artifactId>sakai-kernel-api</artifactId>
        <version>1.0RC2-SNAPSHOT</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.sakaiproject.kernel</groupId>
        <artifactId>sakai-component-manager</artifactId>
        <version>1.0RC2-SNAPSHOT</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.sakaiproject.kernel</groupId>
        <artifactId>sakai-kernel-util</artifactId>
        <version>1.0RC2-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.sakaiproject</groupId>
        <artifactId>sakai-announcement-api</artifactId>
        <version>${sakai.version}</version>
        <scope>provided</scope>
      </dependency>
   	<dependency>
      <groupId>org.sakaiproject</groupId>
      <artifactId>sakai-coursemanagement-api</artifactId>
      <version>${sakai.version}</version>
      <scope>provided</scope>
   	</dependency>
<!--org.sakaiprojectsakai-authz-api${sakai.version}provided-->
      <dependency>
        <groupId>org.sakaiproject</groupId>
        <artifactId>sakai-message-api</artifactId>
        <version>${sakai.version}</version>
        <scope>provided</scope>
      </dependency>
<!--org.sakaiprojectsakai-util-api${sakai.version}provided-->
<!--org.sakaiprojectsakai-component${sakai.version}provided-->
<!--org.sakaiprojectsakai-component-api${sakai.version}provided-->
<!--org.sakaiprojectsakai-content-api${sakai.version}provided-->
      <dependency>
        <groupId>org.sakaiproject</groupId>
        <artifactId>sakai-search-api</artifactId>
        <version>${sakai.version}</version>
        <scope>provided</scope>
      </dependency>
<!--org.sakaiprojectsakai-db-api${sakai.version}provided-->
<!--org.sakaiprojectsakai-site-api${sakai.version}provided-->
<!--org.sakaiprojectsakai-entity-api${sakai.version}provided-->
<!--org.sakaiprojectsakai-tool-api${sakai.version}provided-->
<!--org.sakaiprojectsakai-event-api${sakai.version}provided-->
<!--org.sakaiprojectsakai-tool-servlet${sakai.version}provided-->
<!--org.sakaiprojectsakai-jcr-api${sakai.version}provided-->
<!--org.sakaiprojectsakai-user-api${sakai.version}provided-->
      <dependency>
        <groupId>commons-collections</groupId>
        <artifactId>commons-collections</artifactId>
        <version>3.1</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>servlet-api</artifactId>
        <version>${sakai.servletapi.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>2.3</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>commons-logging</groupId>
        <artifactId>commons-logging</artifactId>
        <version>1.0.4</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>javax.jcr</groupId>
        <artifactId>jcr</artifactId>
        <version>1.0</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>xml-apis</groupId>
        <artifactId>xml-apis</artifactId>
        <version>1.0.b2</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>xml-apis</groupId>
        <artifactId>xmlParserAPIs</artifactId>
        <version>2.0.2</version>
        <scope>provided</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
<!-- unit tests are a global dependency -->
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <reporting>
    <plugins>
      <plugin>
<!-- javadocs -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <debug>true</debug>
          <links>
            <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
          </links>
          <breakiterator>true</breakiterator>
          <verbose>false</verbose>
          <aggregate>true</aggregate>
          <maxmemory>512m</maxmemory>
          <additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
          <version>2.3</version>
        </configuration>
      </plugin>
      <plugin>
<!-- junit test reports -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
      <plugin>
<!-- unit test coverage reporting -->
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.0</version>
      </plugin>
      <plugin>
<!-- Code analysis report -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <configuration>
          <targetJdk>1.5</targetJdk>
          <rulesets>
            <ruleset>/rulesets/basic.xml</ruleset>
            <ruleset>/rulesets/codesize.xml</ruleset>
            <ruleset>/rulesets/design.xml</ruleset>
            <ruleset>/rulesets/finalizers.xml</ruleset>
            <ruleset>/rulesets/imports.xml</ruleset>
            <ruleset>/rulesets/logging-java.xml</ruleset>
            <ruleset>/rulesets/migrating.xml</ruleset>
            <ruleset>/rulesets/strings.xml</ruleset>
            <ruleset>/rulesets/unusedcode.xml</ruleset>
          </rulesets>
<!--  <format>xml</format> -->
          <linkXref>true</linkXref>
          <sourceEncoding>utf-8</sourceEncoding>
          <minimumTokens>100</minimumTokens>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-changelog-plugin</artifactId>
        <configuration>
          <type>range</type>
          <range>90</range>
        </configuration>
      </plugin>
      <plugin>
<!-- TODO tags report -->
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>taglist-maven-plugin</artifactId>
        <configuration>
          <tags>
            <tag>TODO</tag>
            <tag>FIXME</tag>
            <tag>@deprecated</tag>
          </tags>
        </configuration>
      </plugin>
      <plugin>
<!-- jdepend code analysis -->
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jdepend-maven-plugin</artifactId>
      </plugin>
      <plugin>
<!-- jxr source code cross linking -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <configuration>
          <linkJavadoc>true</linkJavadoc>
          <javadocDir>apidocs</javadocDir>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
  <build>
    <directory>target</directory>
    <outputDirectory>target/classes</outputDirectory>
    <finalName>${artifactId}-${version}</finalName>
    <testOutputDirectory>target/test-classes</testOutputDirectory>
    <sourceDirectory>src/main/java</sourceDirectory>
    <scriptSourceDirectory>src/main/webapp</scriptSourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>
    <testResources>
      <testResource>
        <directory>${basedir}/src/test/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
        <includes>
          <include>**/*</include>
        </includes>
      </testResource>
      <testResource>
        <directory>${basedir}/src/test/respources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </testResource>
    </testResources>
    <resources>
      <resource>
        <directory>${basedir}/src/main/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
      <resource>
        <directory>${basedir}/src/main/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
      <resource>
        <directory>${basedir}/src/main/sql</directory>
        <includes>
          <include>**/*.sql</include>
        </includes>
      </resource>
      <resource>
        <directory>${basedir}/src/main/config</directory>
        <includes>
          <include>**/*.properties</include>
          <include>**/*.xml</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <inherited>true</inherited>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.5</source>
          <target>1.5</target>
        </configuration>
      </plugin>
      <plugin>
        <inherited>true</inherited>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-one-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>install-maven-one-repository</goal>
            </goals>
            <phase>install</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <inherited>true</inherited>
        <groupId>org.sakaiproject.maven.plugins</groupId>
        <artifactId>sakai</artifactId>
        <version>1.0</version>
        <extensions>true</extensions>
        <configuration>
          <deployDirectory>${maven.tomcat.home}</deployDirectory>
          <warSourceDirectory>${basedir}/src/main/webapp</warSourceDirectory>
        </configuration>
      </plugin>
      <plugin>
        <inherited>true</inherited>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.0</version>
        <configuration>
          <warSourceDirectory>${basedir}/src/main/webapp</warSourceDirectory>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <modules>
    <module>commons-fileupload-sdata</module>
    <module>tool</module>
    <module>site-template</module>
	<module>site</module>
  </modules>
</project>
